--- a/main.css
+++ b/main.css
@@ -38,3 +38,78 @@ a{
     /* transform: none; */
     text-decoration: none;
 }
+.card_s{
+    width: 255px;
+    border: 4px solid rgb(250, 239, 224);
+    border-radius: 15px;
+    display: inline-block;
+    margin: 20px;
+    background-color: rgb(247, 223, 192);
+}
+.photo{
+ width: 255px;
+ border-radius: 10px;
+}
+.card-title_s{
+    color: rgb(7, 5, 17);
+    padding: 10px 61px;
+    text-align: center;
+}
+.card-text_s{
+    text-align: center;
+    color: rgb(8, 8, 19);
+}
+.s{
+    color: rgb(192, 117, 18);
+    background-color:rgb(240, 209, 151) ;
+    border: none;
+    padding: 10px 30px; 
+    border-radius: 20px;
+    margin-left: 70px;
+    
+}
+.s:hover{
+    background-color: rgb(240, 167, 95);
+    color: rgb(248, 90, 17);
+}
+a{
+    /* transform: none; */
+    text-decoration: none;
+}
+
+.cardM{
+    width: 255px;
+    border: 4px solid rgb(49, 36, 17);
+    border-radius: 15px;
+    display: inline-block;
+    margin: 20px;
+    background-color: rgb(247, 223, 192);
+}
+.photo{
+ width: 255px;
+ height: 200px;
+ border-radius: 10px;
+}
+.card-title_M{
+    color: rgb(7, 5, 17);
+    padding: 10px 61px;
+    text-align: center;
+}
+.card-text_M{
+    text-align: center;
+    color: rgb(8, 8, 19);
+}
+.M{
+    color: rgb(70, 18, 192);
+    background-color:rgb(172, 157, 130) ;
+    border: none;
+    padding: 10px 30px; 
+    border-radius: 20px;
+    margin-left: 70px;
+    
+}
+.M:hover{
+    background-color: rgb(240, 167, 95);
+    color: rgb(51, 42, 38);
+}
+
