Animatsiyasini ot duhi qildim bitta ochib koring

--- a/main.css
+++ b/main.css
@@ -113,3 +113,62 @@ a{
     color: rgb(51, 42, 38);
 }
 
+
+
+.contentener {
+    background: url("https://images.unsplash.com/photo-1574007557239-acf6863bc375?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=80");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    width: 350px;
+    height: 500px;
+    display: inline-block;
+    box-shadow: 0 0 50px rgba(0, 0, 0, 0.315);
+    margin: 50px 30px;
+    transform-style: preserve-3d;
+    }
+    
+    
+    .contentener__profile {
+     background-color: #e4f2fd;
+     width: 200px;
+     height: 130px;
+     /* padding: 20px; */
+     left: 7%;
+     position: absolute;
+     bottom: 5%;
+     transform: translateZ(50px) translateY(0%) translateX(0%);
+     padding: 10px;
+    }
+    .ytitle {
+       color: #334454;
+       font-size: 1.2rem;
+      }
+   
+   .yabout {
+       color: #a1b2bc;
+       font-size: 0.8rem;
+       margin-bottom: 10px;
+      }
+   
+   .yabout .whos {
+       font-style: italic;
+      }
+   
+   .yimg {
+       width: 60px;
+       height: 60px;
+       border-radius: 50%;
+       object-position: center;
+       object-fit: cover;
+   
+      }
+   
+   .ywrapper{
+       box-sizing: border-box;
+       display: flex;
+       flex-direction: row;
+       align-content: center;
+       justify-content: center;
+       align-items: center;
+   }
